--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
     "bcryptjs": "^2.4.3",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "express-session": "^1.18.1",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
@@ -48,8 +50,10 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
