--- a/package.json
+++ b/package.json
@@ -1,92 +1,99 @@
 {
-  "name": "imc-platform-bn",
-  "version": "1.0.14",
-  "description": "An interface multiservice cooperation backend website",
-  "author": "Bikorimana Saveur",
-  "repository": "Interface-corporation/IMC-Platform-bn",
-  "license": "MIT",
-  "main": "index.ts",
-  "private": true,
-  "scripts": {
-    "dev": "tsx watch --clear-screen=false src/index.ts | pino-pretty",
-    "build": "tsup",
-    "start": "node dist/index.js",
-    "clean": "rimraf dist coverage",
-    "lint": "biome check src/",
-    "lint:fix": "biome check src/ --fix",
-    "format": "biome format src/",
-    "test": "vitest run",
-    "prepare": "husky"
-  },
-  "dependencies": {
-    "@asteasolutions/zod-to-openapi": "^7.0.0",
-    "@neondatabase/serverless": "^0.10.3",
-    "@prisma/adapter-neon": "^5.22.0",
-    "@prisma/client": "^5.22.0",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/passport": "^1.0.17",
-    "@types/passport-google-oauth20": "^2.0.16",
-    "@types/passport-local": "^1.0.38",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.7",
-    "cookie-session": "^2.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "envalid": "^8.0.0",
-    "express": "^4.19.2",
-    "express-rate-limit": "^7.2.0",
-    "express-session": "^1.18.1",
-    "helmet": "^8.0.0",
-    "http-status-codes": "^2.3.0",
-    "jsonwebtoken": "^9.0.2",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "pino": "^9.4.0",
-    "pino-http": "^10.0.0",
-    "swagger-ui-express": "^5.0.0",
-    "ws": "^8.18.0",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-session": "^2.0.49",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.18.0",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/supertest": "^6.0.2",
-    "@types/swagger-ui-express": "^4.1.6",
-    "@types/ws": "^8.5.13",
-    "bufferutil": "^4.0.8",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "pino-pretty": "^11.0.0",
-    "prisma": "^5.22.0",
-    "rimraf": "^6.0.0",
-    "supertest": "^7.0.0",
-    "tsup": "^8.0.2",
-    "tsx": "^4.7.2",
-    "typescript": "^5.4.4",
-    "vite-tsconfig-paths": "^5.0.0",
-    "vitest": "^2.0.0"
-  },
-  "lint-staged": {
-    "*.{js,ts,cjs,mjs,d.cts,d.mts,json,jsonc}": [
-      "biome check --apply --no-errors-on-unmatched"
-    ]
-  },
-  "tsup": {
-    "entry": [
-      "src",
-      "!src/**/__tests__/**",
-      "!src/**/*.test.*"
-    ],
-    "splitting": false,
-    "sourcemap": true,
-    "clean": true
-  }
+    "name": "imc-platform-bn",
+    "version": "1.0.14",
+    "description": "An interface multiservice cooperation backend website",
+    "author": "Bikorimana Saveur",
+    "repository": "Interface-corporation/IMC-Platform-bn",
+    "license": "MIT",
+    "main": "index.ts",
+    "private": true,
+    "scripts": {
+        "dev": "tsx watch --clear-screen=false src/index.ts | pino-pretty",
+        "build": "tsup",
+        "start": "node dist/index.js",
+        "clean": "rimraf dist coverage",
+        "lint": "biome check src/",
+        "lint:fix": "biome check src/ --fix",
+        "format": "biome format src/",
+        "test": "vitest run",
+        "prepare": "husky",
+        "generate": "npx prisma generate --schema=./src/models/schema.prisma",
+        "prisma-push": "npx prisma db push --schema=./src/models/schema.prisma"
+    },
+    "dependencies": {
+        "@asteasolutions/zod-to-openapi": "^7.0.0",
+        "@neondatabase/serverless": "^0.10.3",
+        "@prisma/adapter-neon": "^5.22.0",
+        "@prisma/client": "^5.22.0",
+        "@types/compression": "^1.7.5",
+        "@types/cookie-parser": "^1.4.7",
+        "@types/nodemailer": "^6.4.17",
+        "@types/passport": "^1.0.17",
+        "@types/passport-google-oauth20": "^2.0.16",
+        "@types/passport-local": "^1.0.38",
+        "bcryptjs": "^2.4.3",
+        "compression": "^1.7.5",
+        "cookie-parser": "^1.4.7",
+        "cookie-session": "^2.1.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "envalid": "^8.0.0",
+        "express": "^4.19.2",
+        "express-rate-limit": "^7.2.0",
+        "express-session": "^1.18.1",
+        "helmet": "^8.0.0",
+        "http-status-codes": "^2.3.0",
+        "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^6.9.16",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
+        "passport-jwt": "^4.0.1",
+        "passport-local": "^1.0.0",
+        "pino": "^9.4.0",
+        "pino-http": "^10.0.0",
+        "swagger-ui-express": "^5.0.0",
+        "uuid": "^11.0.3",
+        "ws": "^8.18.0",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "1.9.4",
+        "@types/bcryptjs": "^2.4.6",
+        "@types/cookie-session": "^2.0.49",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/express-session": "^1.18.0",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/passport-jwt": "^4.0.1",
+        "@types/supertest": "^6.0.2",
+        "@types/swagger-ui-express": "^4.1.6",
+        "@types/ws": "^8.5.13",
+        "bufferutil": "^4.0.8",
+        "husky": "^9.0.11",
+        "lint-staged": "^15.2.2",
+        "pino-pretty": "^11.0.0",
+        "prisma": "^5.22.0",
+        "rimraf": "^6.0.0",
+        "supertest": "^7.0.0",
+        "tsup": "^8.0.2",
+        "tsx": "^4.7.2",
+        "typescript": "^5.4.4",
+        "vite-tsconfig-paths": "^5.0.0",
+        "vitest": "^2.0.0"
+    },
+    "lint-staged": {
+        "*.{js,ts,cjs,mjs,d.cts,d.mts,json,jsonc}": [
+            "biome check --apply --no-errors-on-unmatched"
+        ]
+    },
+    "tsup": {
+        "entry": [
+            "src",
+            "!src/**/__tests__/**",
+            "!src/**/*.test.*"
+        ],
+        "splitting": false,
+        "sourcemap": true,
+        "clean": true
+    }
 }
