added fetch products route

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "format": "biome format src/",
         "test": "vitest run",
         "prepare": "husky",
-        "generate": "npx prisma generate --schema=./src/models/schema.prisma",
-        "prisma-push": "npx prisma db push --schema=./src/models/schema.prisma"
+        "generate": "npx prisma generate --schema=./src/models",
+        "prisma-push": "npx prisma db push --schema=./src/models"
     },
     "dependencies": {
         "@asteasolutions/zod-to-openapi": "^7.0.0",
