--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "format": "biome format src/",
         "test": "vitest run",
         "prepare": "husky",
-        "generate": "npx prisma generate --schema=./src/models",
+        "prisma": "npx prisma generate --schema=./src/models",
         "prisma-push": "npx prisma db push --schema=./src/models"
     },
     "dependencies": {
@@ -27,11 +27,13 @@
         "@prisma/client": "^5.22.0",
         "@types/compression": "^1.7.5",
         "@types/cookie-parser": "^1.4.7",
+        "@types/multer": "^1.4.12",
         "@types/nodemailer": "^6.4.17",
         "@types/passport": "^1.0.17",
         "@types/passport-google-oauth20": "^2.0.16",
         "@types/passport-local": "^1.0.38",
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^2.5.1",
         "compression": "^1.7.5",
         "cookie-parser": "^1.4.7",
         "cookie-session": "^2.1.0",
@@ -44,6 +46,7 @@
         "helmet": "^8.0.0",
         "http-status-codes": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.16",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
