added carts: add product to cart and fetch user carts

--- a/.env.example
+++ b/.env.example
@@ -30,8 +30,8 @@ GMAIL_PASSWORD=
 GMAIL_AUTHANTICATION_EMAIL=
 GMAIL_SENDER_EMAIL=
 SMTP_HOST="smtp.gmail.com"
-SMTP_PORT=
-SMTP_FROM_NAME=
+SMTP_PORT=465
+SMTP_FROM_NAME="Bikorimana IMC Ltd"
 
 # Cloudinary setup
 CLOUDINARY_CLOUD_NAME=
