--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "main": "index.ts",
     "private": true,
     "scripts": {
-        "dev": "tsx watch --clear-screen=false src/index.ts | pino-pretty",
+        "dev": "NODE_ENV=development & tsx watch --clear-screen=false src/index.ts | pino-pretty",
+        "prod": "NODE_ENV=production tsx watch --clear-screen=false src/index.ts | pino-pretty",
         "build": "tsup",
         "start": "node dist/index.js",
         "clean": "rimraf dist coverage",
@@ -17,15 +18,12 @@
         "format": "biome format src/",
         "test": "vitest run",
         "prepare": "husky",
-        "prisma": "npx prisma generate --schema=./src/models",
-        "prisma-push": "npx prisma db push --schema=./src/models"
+        "prisma": "npx prisma generate --schema=./src/models && npx prisma db push --schema=./src/models"
     },
     "dependencies": {
         "@asteasolutions/zod-to-openapi": "^7.0.0",
-        "@neondatabase/serverless": "^0.10.3",
-        "@prisma/adapter-neon": "^5.22.0",
-        "@prisma/client": "^5.22.0",
         "@types/compression": "^1.7.5",
+        "@types/connect-pg-simple": "^7.0.3",
         "@types/cookie-parser": "^1.4.7",
         "@types/multer": "^1.4.12",
         "@types/nodemailer": "^6.4.17",
@@ -35,6 +33,7 @@
         "bcryptjs": "^2.4.3",
         "cloudinary": "^2.5.1",
         "compression": "^1.7.5",
+        "connect-pg-simple": "^10.0.0",
         "cookie-parser": "^1.4.7",
         "cookie-session": "^2.1.0",
         "cors": "^2.8.5",
@@ -56,11 +55,11 @@
         "pino-http": "^10.0.0",
         "swagger-ui-express": "^5.0.0",
         "uuid": "^11.0.3",
-        "ws": "^8.18.0",
         "zod": "^3.23.8"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
+        "@prisma/client": "^6.0.1",
         "@types/bcryptjs": "^2.4.6",
         "@types/cookie-session": "^2.0.49",
         "@types/cors": "^2.8.17",
@@ -73,9 +72,11 @@
         "@types/ws": "^8.5.13",
         "bufferutil": "^4.0.8",
         "husky": "^9.0.11",
+        "i": "^0.3.7",
         "lint-staged": "^15.2.2",
+        "npm": "^10.9.2",
         "pino-pretty": "^11.0.0",
-        "prisma": "^5.22.0",
+        "prisma": "^6.0.1",
         "rimraf": "^6.0.0",
         "supertest": "^7.0.0",
         "tsup": "^8.0.2",
