--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "main": "index.ts",
     "private": true,
     "scripts": {
-        "dev": "NODE_ENV=development & tsx watch --clear-screen=false src/index.ts | pino-pretty",
-        "prod": "NODE_ENV=production & node dist/index.js",
+        "dev": "NODE_ENV=development tsx watch --clear-screen=false src/index.ts | pino-pretty",
+        "prod": "npm run build && NODE_ENV=production node dist/index.js",
         "build": "tsup",
         "start": "node dist/index.js",
         "clean": "rimraf dist coverage",
